cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: cert-manager
  name: cert-manager
