nginx-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ingress
  name: ingress
