tsuro-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tsuro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: $1/tsuro/jpro/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/preserve-host: "false"
spec:
  rules:
  - host: lab.tplant.com.au
    http:
      paths:
      - backend:
          serviceName: tsuro
          servicePort: 80
        path: /jpro(/|$)(.*)
